add and delete comments
