# doc/api.yaml
@@ -314,6 +314,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Photo'
+  
   /photo/like/{photoId}:
     post:
       summary: Like Photo
@@ -365,16 +366,37 @@ paths:
           schema:
             $ref: "#/components/schemas/idString"
           required: true
-        - in: query
-          name: commentId
-          schema:
-            $ref: "#/components/schemas/idString"
-          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: false
+              properties:
+                comment:
+                  $ref: "#/components/schemas/plainString"
       security:
         - BearerAuth: []  
       responses:
-        '204':
+        '200':
           description: Comment added successfully
+          content:
+              application/json:
+                schema:
+                  type: object
+                  additionalProperties: false
+                  properties:
+                    userId:
+                      $ref: "#/components/schemas/plainString"
+                    id:
+                      $ref: "#/components/schemas/plainString"
+                    imageId:
+                      $ref: "#/components/schemas/plainString"
+                    text:
+                      $ref: "#/components/schemas/plainString"
+                    CreateTime:
+                      $ref: "#/components/schemas/plainString"
         '400':
           description: Bad Request - Invalid photo ID or photo not found
         '401':
@@ -384,11 +406,6 @@ paths:
       operationId: uncommentPhoto
       tags: ["photo"]
       parameters:
-        - in: query
-          name: photoId
-          schema:
-            $ref: "#/components/schemas/idString"
-          required: true
         - in: query
           name: commentId
           schema:
